<resources>
    <string name="app_name">The Light Projekt</string>
    <string name="text_label_home">Home</string>
    <string name="text_label_chat">Chat</string>
    <string name="text_label_shoppingBag">Cart</string>
    <string name="text_label_account">Account</string>
    <string name="text_label_discover">Discover Our Collection</string>
    <string name="shop_title">The Collection</string>
    <string name="shop_headline">The Next Generation Of Eyewear.</string>
    <string name="shop_description">Taking inspiration from popular style, driving the new fashion.</string>
    <string name="product_about">About The Frame</string>
    <string name="product_button_try_online">Try Online</string>
    <string name="product_button_add_to_cart">Add to Cart</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_title">MY ACCOUNT</string>
    <string name="text_profile_myprofile">MY PROFILE</string>
    <string name="text_profile_myadresses">MY ADDRESSES</string>
    <string name="text_profile_myprescriptions">MY PRESCRIPTIONS</string>
    <string name="text_profile_myorders">MY ORDERS</string>
    <string name="text_logout">LOGOUT</string>
    <string name="text_save_profile">SAVE</string>
    <string name="my_profile_title">MY PROFILE</string>
    <string name="label_firstname">FIRST NAME</string>
    <string name="label_lastname">LAST NAME</string>
    <string name="register_title">REGISTER</string>
    <string name="text_fragment_register">CREATE YOUR ACCOUNT</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="my_orders_title">MY ORDERS</string>
    <string name="my_addresses_title">MY ADDRESSES</string>
    <string name="text_add_address">NEW ADDRESS</string>
    <string name="text_new_address">NEW ADDRESS</string>
    <string name="text_next">NEXT</string>
    <string name="with_prescription">With Prescription</string>
    <string name="text_wt_prescription">Your Glasses At Your Sight</string>
    <string name="without_prescription">Without Prescription</string>
    <string name="text_without_prescription">Lenses With Blue Light Filter</string>
    <string name="blue_light_filter">Blue Light Filter</string>
    <string name="text_bluelight">UV And Blue Light Protection</string>
    <string name="clear">Clear</string>
    <string name="text_clear_coating"><![CDATA[UV Protection & Anti-Reflective]]></string>
    <string name="text_select_lens">SELECT YOUR LENS TYPE</string>
    <string name="text_select_coating">SELECT A COATING FOR YOUR LENSES</string>
    <string name="text_select_thinning">SELECT THE LENS THINNING</string>
    <string name="Slim">SLIM</string>
    <string name="text_slim">Correction Lower Than -1 Or +1</string>
    <string name="thin">THIN</string>
    <string name="text_thin">Correction Lower Than -3 Or + 3</string>
    <string name="extra_thin">EXTRA THIN</string>
    <string name="text_extra_thin">Correction Lower Than -5 Or + 5</string>
    <string name="text_add_to_bag">ADD TO BAG</string>
    <string name="text_return_profile">RETURN</string>
    <string name="label_address">ADDRESS</string>
    <string name="label_city">CITY</string>
    <string name="label_postcode">POSTCODE</string>
    <string name="text_add">ADD</string>
    <string name="label_mobile">MOBILE PHONE</string>
    <string name="label_alias">ALIAS</string>
    <string name="my_prescriptions_title">MY PRESCRIPTIONS</string>
    <string name="text_new_prescription">NEW PRESCRIPTION</string>
    <string name="label_right">RIGHT</string>
    <string name="label_left">LEFT</string>
    <string name="label_right_eye">RIGHT EYE</string>
    <string name="label_left_eye">LEFT EYE</string>
</resources>