<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ShopFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_title"
        android:textFontWeight="700"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_headline"
        android:textFontWeight="700"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_description"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="30dp"/>

</LinearLayout>