<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ShopFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SIMON"
        android:textFontWeight="700"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_select_coating"
        android:textFontWeight="700"
        android:textSize="20sp"
        android:textColor="@color/beautyBlack"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="40dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:cardCornerRadius="20dp"
        android:layout_marginVertical="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/blue_light_filter"
                />

            <TextView
                android:id="@+id/adapter_address_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="+20€"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/adapter_address_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:text="@string/text_bluelight"
                />

        </LinearLayout>




    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:cardCornerRadius="20dp"
        android:layout_marginVertical="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/clear"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="FREE"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:text="@string/text_clear_coating"
                />

        </LinearLayout>




    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width ="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        app:cornerRadius="20dp"
        android:textFontWeight="700"
        android:textSize="20dp"
        android:paddingVertical="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/text_next"
        />


</LinearLayout>