<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.NewAddressFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textFontWeight="700"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:textColor="@color/beautyBlack"
            android:text="@string/text_new_address"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/error_message_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:padding="10dp"
            android:textFontWeight="700"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:textColor="@color/white"
            android:background="@color/red"
            android:layout_marginBottom="20dp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/label_alias"
            android:textColor="@color/beautyBlack"
            android:textFontWeight="700"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopStart="15dp"
            android:layout_marginBottom="14dp"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alias_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/label_firstname"
            android:textColor="@color/beautyBlack"
            android:textFontWeight="700"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopStart="15dp"
            android:layout_marginBottom="14dp"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/label_lastname"
            android:textColor="@color/beautyBlack"
            android:textFontWeight="700"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopStart="15dp"
            android:layout_marginBottom="14dp"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/label_address"
            android:textColor="@color/beautyBlack"
            android:textFontWeight="700"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopStart="15dp"
            android:layout_marginBottom="14dp"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textFontWeight="700"
            android:fontFamily="monospace"
            android:textColor="@color/beautyBlack"
            android:layout_marginLeft="40dp"
            android:text="@string/label_city"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopStart="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textFontWeight="700"
            android:fontFamily="monospace"
            android:textColor="@color/beautyBlack"
            android:layout_marginLeft="40dp"
            android:text="@string/label_postcode"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopStart="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postcode_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textFontWeight="700"
            android:fontFamily="monospace"
            android:textColor="@color/beautyBlack"
            android:layout_marginLeft="40dp"
            android:text="@string/label_mobile"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopStart="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_add_address_button"
            android:layout_width ="346dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:cornerRadius="20dp"
            android:textFontWeight="700"
            android:textSize="20dp"
            android:paddingVertical="10dp"
            android:text="@string/text_add"
            />


    </LinearLayout>
</ScrollView>
