<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textFontWeight="700"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:textColor="@color/beautyBlack"
        android:text="@string/my_profile_title"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"/>

    <TextView
        android:id="@+id/message_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:padding="10dp"
        android:textFontWeight="700"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:background="@color/green"
        android:layout_marginTop="30dp"
        android:visibility="gone"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/label_firstname"
        android:textColor="@color/beautyBlack"
        android:textFontWeight="700"
        android:textSize="20dp"
        android:layout_marginLeft="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp"
        android:layout_marginBottom="14dp"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname_input_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/label_lastname"
        android:textColor="@color/beautyBlack"
        android:textFontWeight="700"
        android:textSize="20dp"
        android:layout_marginLeft="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp"
        android:layout_marginBottom="14dp"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname_input_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="EMAIL"
        android:textColor="@color/beautyBlack"
        android:textFontWeight="700"
        android:textSize="20dp"
        android:layout_marginLeft="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp"
        android:layout_marginBottom="14dp"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button_profile"
        android:layout_width ="346dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:cornerRadius="20dp"
        android:textFontWeight="700"
        android:textSize="20dp"
        android:paddingVertical="10dp"
        android:text="@string/text_save_profile"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/return_button_profile"
        android:layout_marginTop="10dp"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cornerRadius="20dp"
        android:text="@string/text_return_profile"
        android:textSize="20dp"
        android:textFontWeight="700"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black"/>


</LinearLayout>